--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KokoKeyboard</string>
+    <string name="type_something_with_android_stock_keypad">Type Something with android stock keypad</string>
+    <string name="type_something_with_no_numbers">Type Something with no numbers</string>
+    <string name="type_something_with_custom_keypad">Type Something with custom keypad</string>
 </resources>
